fix vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,7 @@
 .tic-tac-toe-resize-ui__input-size {
     width: 100%;
     display: flex;
+    align-items: center;
     gap: 20px;
 }
 
